--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.6.7",
-    "tslib": "2.2.0",
-    "zone.js": "0.10.3",
-    "jasmine-core": "3.6.0",
+    "@angular/animations": "11.2.13",
+    "@angular/common": "11.2.13",
+    "@angular/compiler": "11.2.13",
     "@angular/core": "11.2.13",
     "@angular/forms": "11.2.13",
-    "@angular/common": "11.2.13",
-    "@angular/router": "11.2.13",
-    "jasmine-marbles": "0.6.0",
-    "@angular/compiler": "11.2.13",
-    "@angular/animations": "11.2.13",
     "@angular/platform-browser": "11.2.13",
+    "@angular/platform-browser-dynamic": "11.2.13",
+    "@angular/router": "11.2.13",
+    "@popperjs/core": "^2.9.2",
     "angular-in-memory-web-api": "0.11.0",
-    "@angular/platform-browser-dynamic": "11.2.13"
+    "bootstrap": "^5.0.0",
+    "jasmine-core": "3.6.0",
+    "jasmine-marbles": "0.6.0",
+    "rxjs": "6.6.7",
+    "tslib": "2.2.0",
+    "zone.js": "0.10.3"
   },
   "scripts": {
     "ng": "ng",
